--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "worker_threads",
+  "name": "top_vino",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -29,6 +29,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.5.1",
     "prettier": "3.5.3",
+    "prisma": "^6.9.0",
     "typescript-eslint": "^8.30.1"
   },
   "dependencies": {
